--- a/app/lib/app_web/templates/section/show.html.eex
+++ b/app/lib/app_web/templates/section/show.html.eex
@@ -68,7 +68,7 @@
                             <h3 class="uk-card-title uk-margin-remove-bottom">
                                 <%= topic.title %>
                             </h3>
-                            <%= render AppWeb.HelperView, "multiparagraph_text.html", text: topic.description, truncate: true, pclass: "uk-text-meta uk-margin-remove-top uk-margin-remove-bottom" %>
+                            <%= render AppWeb.HelperView, "multiparagraph_text.html", text: topic.description, truncate: true, pclass: "uk-text-meta uk-margin-remove-bottom" %>
                         </div>
                     </div>
                     <%= if @can_edit do %>
