--- a/app/lib/app_web/templates/topic/breadcrumbs.html.eex
+++ b/app/lib/app_web/templates/topic/breadcrumbs.html.eex
@@ -1,9 +1,9 @@
 <div class="uk-light uk-background-secondary breadcrumb-holder">
     <ul class="breadcrumb uk-breadcrumb">
         <li>
-            <a href="<%= Routes.user_section_path(@conn, :index) %>">
+            <span>
                 Courses
-            </a>
+            </span>
         </li>
         <li>
              <%= if App.Accounts.can_edit_course(@current_user, @course) do %>
