--- a/app/lib/app_web/templates/topic/show.html.eex
+++ b/app/lib/app_web/templates/topic/show.html.eex
@@ -23,7 +23,7 @@
     <%= "topic is " <> topic_status <>" / " %>
     <%= "submissions: "%><%= if @topic.allow_submissions == false, do: "not "%><%= "allowed /"%>
     <%= "comments: "%><%= if @topic.allow_submission_comments == false, do: "not "%><%= "allowed /"%>
-    <%= "ratings: "%><%= if @topic.allow_ranking == false, do: "not "%><%= "allowed /"%>
+    <%= "ratings: "%><%= if @topic.allow_submission_voting == false, do: "not "%><%= "allowed /"%>
     <%= "viewing other user submissions: "%><%= if @topic.show_user_submissions == false, do: "not "%><%= "allowed"%>
     <%= "submission limit: "%><%= Integer.to_string(@topic.user_submission_limit) %>
     </p>
