--- a/app/lib/app_web/templates/page/index.html.eex
+++ b/app/lib/app_web/templates/page/index.html.eex
@@ -6,7 +6,7 @@
           <span style="letter-spacing: 0.2em; font-size: 0.725rem">WELCOME</span>
           <h1 class="uk-margin-top uk-margin-small-bottom uk-margin-remove-adjacent">Yale Chat</h1>
           <p>Seamless in-class communication between students and professors - say goodbye to Zoom chatrooms, ad-hoc Slack channels, and Slido!</p>
-          <a href="/auth/cas" class="uk-button uk-button-default uk-margin-top">LOG IN</a>
+          <a href="/about" class="uk-button uk-button-default uk-margin-top">Learn More</a>
         </div>
       </div>
     </div>
