--- a/app/lib/app_web/templates/about/index.html.eex
+++ b/app/lib/app_web/templates/about/index.html.eex
@@ -1,6 +1,6 @@
 <div class="uk-sticky-placeholder" style="height: 80px; margin: 0px;" hidden=""></div>
   <div class="tm-main uk-section uk-section-default">
-    <div class="uk-container uk-container-small uk-position-relative">
+    <div class="uk-container uk-container-xsmall uk-position-relative">
       <div>
       <div class="uk-container uk-container-small uk-position-relative">
         <div>
@@ -8,46 +8,49 @@
             <h1 id="section" class="uk-h1 tm-heading-fragment"><a href="#section">About Yale Chat</a></h1>
             <p class="uk-text-lead">Designed to facilitate seamless in-class communication, Yale Chat provides many avenues for interacting with professors and students.</p>
 
+            <h1 id="students" class="uk-h2 tm-heading-fragment"><a href="#students">Students</a></h1>
+            <h2 id="home" class="uk-h3 tm-heading-fragment"><a href="#home">Home Page</a></h2>
+            <p>When you first log in, you'll see a list of the courses or sections you have access to.</p>
+            <img data-src="/images/about-home.png" width="" height="" alt="" uk-img>
+            <p>Click on any section to see all topics posted in that section. Alternatively, if you have been assigned to a section by mistake, you can click "Leave Section" to be removed. This can't be undone, so be sure before leaving the section!</p>
+
+            <hr class="uk-margin-medium">
+
+            <h2 id="topics-student" class="uk-h3 tm-heading-fragment"><a href="#topics-student">Topics</a></h2>
+            <p>Once you see the topics in a section, simply click one to see the complete description and other students' submissions.</p>
+            <img data-src="/images/about-topics-student.png" width="" height="" alt="" uk-img>
+
+            <hr class="uk-margin-medium">
+
             <h2 id="submissions" class="uk-h3 tm-heading-fragment"><a href="#submissions">Submissions</a></h2>
             <p>Your professors will periodically post topics to your section, like "Submit Ideas Here" or "What questions do you have for our speaker"?
             <br/><br/>
-            You can post submissions in response.
-            (Insert images here)
-            </p>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
+            You can post submissions in response. Simply click the + sign in the lower right corner of your screen to create a new submission.</p>
+            <img data-src="/images/about-submission-student.png" width="" height="" alt="" uk-img>
+            <p>If you need to edit your submission after it's posted, click on your submission on the topic page and you'll see an Edit link just below the description.</p>
+            <p>If there are other submissions on the topic, you'll be able to see them on the topic view page. Click any of the cards to see the submission details and comment on or rate the submission.</p>
+            <img data-src="/images/about-view-submissions.png" width="" height="" alt="" uk-img>
+            <p><br/></p>
+            <img data-src="/images/about-submission-detail.png" width="" height="" alt="" uk-img>
 
-            <hr class="uk-margin-large">
+            <hr class="uk-margin-medium">
 
             <h2 id="comments" class="uk-h3 tm-heading-fragment"><a href="#comments">Comments</a></h2>
-            <p>Your professors will periodically post topics to your section, like "Submit Ideas Here" or "What questions do you have for our speaker"?
-            <br/><br/>
-            You can post submissions in response.
-            (Insert images here)
-            </p>
+            <p>When viewing a submission, click the + button on the lower right corner of the screen or scroll down to see the comment box. Fill out your comment and click submit to add it to the submission.</p>
+            <img data-src="/images/about-comment-submit.png" width="" height="" alt="" uk-img>
+            <p>You will be able to see your comment, along with those from other students, on the submission page. Just like submissions, you can edit or delete if necessary.</p>
+            <img data-src="/images/about-comment-view.png" width="" height="" alt="" uk-img>
 
-            <hr class="uk-margin-large">
+            <hr class="uk-margin-medium">
 
             <h2 id="ratings" class="uk-h3 tm-heading-fragment"><a href="#ratings">Ratings</a></h2>
-            <p>Your professors will periodically post topics to your section, like "Submit Ideas Here" or "What questions do you have for our speaker"?
-            <br/><br/>
-            You can post submissions in response.
-            (Insert images here)
-            </p>
+            <p>Submitting ratings is even easier than comments; on the submission page, just change the rating dropdown and your rating will be submitted.</p>
+            <img data-src="/images/about-rating-submit.png" width="" height="" alt="" uk-img>
+            <p>Once a submission has been rated, you will be able to see the average of all ratings (if the professors have allowed students to view rating averages).</p>
 
             <hr class="uk-margin-large">
 
+            <h1 id="professors" class="uk-h2 tm-heading-fragment"><a href="#professors">Professors</a></h1>
             <h2 id="courses" class="uk-h3 tm-heading-fragment"><a href="#courses">Courses</a></h2>
             <p>Your professors will periodically post topics to your section, like "Submit Ideas Here" or "What questions do you have for our speaker"?
             <br/><br/>
@@ -55,7 +58,7 @@
             (Insert images here)
             </p>
 
-            <hr class="uk-margin-large">
+            <hr class="uk-margin-medium">
 
             <h2 id="sections" class="uk-h3 tm-heading-fragment"><a href="#sections">Sections</a></h2>
             <p>Your professors will periodically post topics to your section, like "Submit Ideas Here" or "What questions do you have for our speaker"?
@@ -64,7 +67,7 @@
             (Insert images here)
             </p>
 
-            <hr class="uk-margin-large">
+            <hr class="uk-margin-medium">
 
             <h2 id="topics" class="uk-h3 tm-heading-fragment"><a href="#topics">Topics</a></h2>
             <p>Your professors will periodically post topics to your section, like "Submit Ideas Here" or "What questions do you have for our speaker"?
@@ -83,6 +86,12 @@
           <ul uk-scrollspy-nav="closest: li; scroll: true; offset: 100" class="uk-nav uk-nav-default tm-nav uk-nav-parent-icon">
             <li class="uk-nav-header">Students</li>
             <li class="uk-active">
+              <a href="#home">Home Page</a>
+            </li>
+            <li class="topics-student">
+              <a href="#topics-student">Topics</a>
+            </li>
+            <li class="">
               <a href="#submissions">Submissions</a>
             </li>
             <li class="">
