Hotfix for broken about page when logged in

--- a/app/lib/app_web/templates/layout/app.html.eex
+++ b/app/lib/app_web/templates/layout/app.html.eex
@@ -28,11 +28,11 @@
         </div>
         </a>
         <nav class="navigation">
-            <%= if is_nil(@conn.private.plug_session["uid"]) do %>
-                <span><a href="/auth/cas">Log In</a></span>
-            <% else %>
-              <span><%= link @conn.private.plug_session["uid"], to: Routes.user_path(@conn, :show, @conn.assigns.current_user) %></span>
-            <% end %>
+            <%= if is_nil((@conn.assigns[:current_user])) do %>
+                    <li><a href="/auth/cas">Log In</a></span>
+                  <% else %>
+                    <li><%= link @conn.private.plug_session["uid"], to: Routes.user_path(@conn, :show, @conn.assigns.current_user) %></li>
+                  <% end %>
             <span uk-icon="icon: user; ratio: 0.7" class="icon"></span>
         </nav>
 
