--- a/app/lib/app_web/templates/layout/app.html.eex
+++ b/app/lib/app_web/templates/layout/app.html.eex
@@ -47,8 +47,27 @@
     </header>
     <%= render_existing @view_module, "breadcrumbs.html", assigns %>
     <main role="main" class="container">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+      <%= if get_flash(@conn) != Map.new() do %>
+        <%= if !is_nil(get_flash(@conn, :info)) do %>
+          <div class="uk-alert-primary" uk-alert>
+            <a class="uk-alert-close" uk-close></a>
+            <p><%= get_flash(@conn, :info) %></p>
+          </div>
+        <% end %>
+        <%= if !is_nil(get_flash(@conn, :success)) do %>
+          <div class="uk-alert-success" uk-alert>
+            <a class="uk-alert-close" uk-close></a>
+            <p><%= get_flash(@conn, :success) %></p>
+          </div>
+        <% end %>
+        <%= if !is_nil(get_flash(@conn, :error)) do %>
+          <div class="uk-alert-danger" uk-alert>
+            <a class="uk-alert-close" uk-close></a>
+            <p><%= get_flash(@conn, :error) %></p>
+          </div>
+        <% end %>
+      <% end %>
+      <div><p></p></div>
       <div class="main-body">
       <%= render @view_module, @view_template, assigns %>
       </div>
