--- a/app/lib/app_web/templates/course/show.html.eex
+++ b/app/lib/app_web/templates/course/show.html.eex
@@ -35,7 +35,11 @@
     </div>
     <div class="uk-card-footer">
       <div class="details uk-width-expand">
-        <%= link "Edit Course Details", to: Routes.course_path(@conn, :edit, @course) %>
+        <%= link "Edit Details", to: Routes.course_path(@conn, :edit, @course) %>
+        <%= if @role == "owner" do %>
+        |
+        <%= link "Delete", to: Routes.course_path(@conn, :delete, @course), method: :delete, data: [confirm: "Are you absolutely sure you would like to delete the course? This cannot be undone!"] %>
+        <%= end %>
       </div>
     </div>
   </div>
@@ -53,7 +57,9 @@
       Course Roles (Professors/TAs)
       <ul class="uk-margin-remove-top">
         <li><%= link "View Existing Course Roles", to: Routes.course_course__role_path(@conn, :index, @course) %></li>
-        <li><%= link "Add New Course Roles", to: Routes.course_course__role_path(@conn, :bulk_new, @course) %></li>
+        <%= if @role == "owner" do %>
+          <li><%= link "Add New Course Roles", to: Routes.course_course__role_path(@conn, :bulk_new, @course) %></li>
+        <%= end %>
       </ul>
     </div>
   </div>
@@ -65,13 +71,12 @@
       <h3 class="uk-card-title uk-margin-remove-bottom">Sections in <%= @course.name %></h3>
     </div>
     <div class="uk-card-body">
-      <table>
+      <table class="uk-table  uk-table-small">
         <thead>
           <tr>
             <th>Title</th>
-            <th>Crn</th>
-
-            <th></th>
+            <th>CRN</th>
+            <th><%= if @role == "owner" do %>Actions<%= else %>View<%= end %></th>
           </tr>
         </thead>
         <tbody>
@@ -81,9 +86,11 @@
             <td><%= section.crn %></td>
 
             <td>
-              <span><%= link "Show", to: Routes.section_path(@conn, :show, section) %></span>
-              <span><%= link "Edit", to: Routes.section_path(@conn, :edit, section) %></span>
-              <span><%= link "Delete", to: Routes.section_path(@conn, :delete, section), method: :delete, data: [confirm: "Are you sure?"] %></span>
+              <span><%= link "View", to: Routes.section_path(@conn, :show, section) %></span>
+              <%= if @role == "owner" do %>
+                <span><%= link "Edit", to: Routes.section_path(@conn, :edit, section) %></span>
+                <span><%= link "Delete", to: Routes.section_path(@conn, :delete, section), method: :delete, data: [confirm: "Are you sure?"] %></span>
+              <%= end %>
             </td>
           </tr>
         <% end %>
