--- a/app/lib/app_web/templates/submission/form.html.eex
+++ b/app/lib/app_web/templates/submission/form.html.eex
@@ -29,6 +29,14 @@
   </div>
 </div>
 
+<%= if @topic.anonymous do %>
+<% else %>
+  <div class="uk-alert-warning" uk-alert>
+    <a class="uk-alert-close" uk-close></a>
+    <p>Note: this topic is not anonymous; your name will be visible as the author of this submission.</p>
+  </div>
+<% end %>
+
 <div class="uk-margin">
     <%= submit "Save", class: "uk-button-secondary uk-button" %>
 </div>
