--- a/app/lib/app_web/templates/rating/edit.html.eex
+++ b/app/lib/app_web/templates/rating/edit.html.eex
@@ -2,4 +2,4 @@
 
 <%= render "form.html", Map.put(assigns, :action, Routes.rating_path(@conn, :update, @rating)) %>
 
-<span><%= link "Back", to: Routes.submission_rating_path(@conn, :index, @submission) %></span>
+<span><%= link "Back", to: Routes.submission_path(@conn, :show, @submission) %></span>
