--- a/app/lib/app_web/templates/topic/live.html.leex
+++ b/app/lib/app_web/templates/topic/live.html.leex
@@ -3,15 +3,7 @@
     <h1 class="uk-heading-divider"><%= @topic.title %></h1>
     <%= render AppWeb.HelperView, "multiparagraph_text.html", text: @topic.description %>
 
-    <% topic_status = cond do
-
-    DateTime.compare(@topic.closed_at, current_time(0)) == :lt ->
-    "closed"
-    DateTime.compare(@topic.opened_at, current_time(0)) == :gt ->
-    "closed"
-    true ->
-    "open"
-    end %>
+    <% topic_status = "TODO-FIXME"  %>
 
     <%= if @can_edit do %>
     <hr>
@@ -35,55 +27,17 @@
 </div>
 
 
-<div class="uk-grid-column-medium uk-grid-row-medium uk-child-width-1-2@s " uk-grid>
-    <%= for {submission, i} <- Enum.with_index(@submissions) do %>
-        <div>
-            <a href="<%= Routes.submission_path(@conn, :show, submission.id) %>">
-                <div class="uk-card uk-card-small uk-card-default uk-card-hover color-<%= 1 + rem submission.id, 20 %>">
-                    <div class="uk-card-header">
-                        <div class="uk-width-expand">
-                            <h5 class="uk-card-title uk-margin-remove-bottom">
-                                <%= submission.title %>
-                            </h5>
-                        </div>
-                    </div>
-                    <div class="uk-card-body">
-                        <div class="uk-width-expand">
-                            <%= render AppWeb.HelperView, "multiparagraph_text.html", text: submission.description, truncate: true %>
-                        </div>
-                    </div>
-                    <div class="uk-card-footer">
-                        <div class="details uk-width-expand">
-                            <%= if @topic.anonymous do %>
-                            <% else %>
-                            <b><%= submission.user_display_name %></b>
-                            /
-                            <% end %>
-                            <%= if submission.rating_count > 0 do %>
-                            <%= stars submission.avg_rating %>
-                            (<%= submission.rating_count |> Integer.to_string %>
-                             <%= if submission.rating_count > 1 do %>ratings<% else %>rating<% end %>)
-                            <% else %>
-                                No ratings yet.
-                            <% end %>
-                            <span class="comment-icon-count">
-                                <span class="comment-icon" uk-icon="icon:  comments; ratio: 0.7"></span>
-                                <%= submission.comment_count |> Integer.to_string %>
-                            </span>
-
-                            |
-                            <span>Posted at: </span><span class="rating"><%= submission.inserted_at %>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
+<div class="card-holder">
+    <%= for submission <- @submissions do %>
+        <%= live_component @socket, SubmissionLiveComponent, submission: submission %>
     <% end %>
 </div>
 
-<div class="uk-position-fixed uk-position-z-index absolute uk-dark uk-position-bottom-right">
-<a href=<%= Routes.topic_submission_path(@conn, :new, @topic.id) %> class="add uk-box-shadow-small uk-box-shadow-hover-large" uk-marker></a>
-</div>
 
+<div class="mobile-add-button">
+<a href="<%= Routes.topic_submission_path(@conn, :new, @topic.id)%>">
+&#43;
+</a>
+</div>
 
 
