--- a/app/lib/app_web/templates/topic/live.html.leex
+++ b/app/lib/app_web/templates/topic/live.html.leex
@@ -29,7 +29,7 @@
 
 <div class="card-holder">
     <%= for submission <- @submissions do %>
-        <%= live_component @socket, SubmissionLiveComponent, submission: submission %>
+        <%= live_component @socket, SubmissionLiveComponent, id: submission.id, submission: submission %>
     <% end %>
 </div>
 
