--- a/app/lib/app_web/templates/submission/live.html.leex
+++ b/app/lib/app_web/templates/submission/live.html.leex
@@ -86,17 +86,12 @@ Comments
 <%= if @topic.allow_submission_voting do %>
 <div class="form">
 <a name="newrating"></a>
-<% action = if is_nil(@my_rating) do
-Routes.submission_rating_path(@socket, :create, @submission.id)
-else
-Routes.rating_path(@socket, :update, @my_rating)
-end %>
 <% message = if is_nil(@my_rating) do
 "Add a rating"
 else
 "Change your rating"
 end %>
-<%= form_for @rating_changeset, action, [class: "uk-form-stacked"], fn f -> %>
+<%= form_for @rating_changeset, "#", [class: "uk-form-stacked", phx_change: :save], fn f -> %>
   <%= if @rating_changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -115,7 +110,7 @@ end %>
        nil
        end %>
         <div class="uk-form-controls">
-          <%= select f, :score, 1..5 , value: default_value, class: "uk-select", onchange: "this.form.submit()" %>
+          <%= select f, :score, 1..5 , value: default_value, class: "uk-select" %>
           <%= error_tag f, :score %>
         </div>
     </div>
@@ -127,7 +122,7 @@ end %>
 <%= if @topic.allow_submission_comments do %>
 <div>
     <a name="newcomment"></a>
-    <%= form_for @comment_changeset, Routes.submission_comment_path(@socket, :create, @submission.id), [class: "uk-form-stacked"], fn f -> %>
+    <%= form_for @comment_changeset, "#", [class: "uk-form-stacked", phx_submit: :save], fn f -> %>
     <%= if @comment_changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
