Add LDAP sync for user name, email, and faculty status

--- a/app/lib/app_web/templates/user/show.html.eex
+++ b/app/lib/app_web/templates/user/show.html.eex
@@ -20,4 +20,7 @@
 </ul>
 
 <span><%= link "Edit", to: Routes.user_path(@conn, :edit, @user) %></span>
+|
+<span><%= link "Resync with Yale Directory", to: Routes.user_user_path(@conn, :refresh, @user) %></span>
+|
 <span><%= link "Log Out", to: Routes.auth_path(@conn, :delete, @user) %></span>
