--- a/app/lib/app_web/templates/topic/submission_card.html.leex
+++ b/app/lib/app_web/templates/topic/submission_card.html.leex
@@ -28,7 +28,7 @@
                         No ratings yet.
                     <% end %>
                     <span class="comment-icon-count">
-                        <span class="comment-icon" uk-icon="icon:  comments; ratio: 0.7"></span>
+                        <svg width="14" height="14" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="comments"><polyline fill="none" stroke="#999" points="2 0.5 19.5 0.5 19.5 13"></polyline><path stroke="#999" d="M5,19.71 L5,15 L0,15 L0,2 L18,2 L18,15 L9.71,15 L5,19.71 L5,19.71 L5,19.71 Z M1,14 L6,14 L6,17.29 L9.29,14 L17,14 L17,3 L1,3 L1,14 L1,14 L1,14 Z"></path></svg>
                         <%= @submission.comment_count |> Integer.to_string %>
                     </span>
 
